grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  rules:
  - host: grafana-host.com
    http:
      paths:
      - backend:
          serviceName: grafana-service
          servicePort: 3000
